downloader and importer for balances.

--- a/import_config.py.example
+++ b/import_config.py.example
@@ -7,4 +7,5 @@ import beancount_ethereum
 
 CONFIG = [
     beancount_ethereum.importer.Importer(config_path='config.json'),
+    beancount_ethereum.importer_balances.Importer(config_path='config.json'),
 ]
