Modified to merge balances and transactions importer

--- a/import_config.py.example
+++ b/import_config.py.example
@@ -6,6 +6,5 @@ sys.path.append(os.path.dirname(os.path.realpath(__file__)))
 import beancount_ethereum
 
 CONFIG = [
-    beancount_ethereum.importer.Importer(config_path='config.json'),
-    beancount_ethereum.importer_balances.Importer(config_path='config.json'),
+    beancount_ethereum.importer.Importer(config_path='config.json', import_balances=True),
 ]
