--- a/config.json.example
+++ b/config.json.example
@@ -9,6 +9,7 @@
     "block_explorer_api_url": "http://api.etherscan.io/api",
     "block_explorer_api_key": "ABCD1234",
     "block_explorer_api_request_delay": 0,
+    "covalent_api_key": "ABCD1234",
     "base_currency": "ETH",
     "currency_map":  {
         "USDC.E": {"commodity": "USD", "account_suffix": "USDC"},
